--- a/Zadanie_Kogorev/Pages/ProductUserControl1.xaml
+++ b/Zadanie_Kogorev/Pages/ProductUserControl1.xaml
@@ -6,52 +6,84 @@
              xmlns:local="clr-namespace:Zadanie_Kogorev.Pages"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="400">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
+    <Border BorderBrush="Black" BorderThickness="1" Margin="10">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*"/>
 
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
 
-        <StackPanel Grid.RowSpan="4" Grid.ColumnSpan="3">
-            <Image/>
-        </StackPanel>
-        
-        <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal" VerticalAlignment="Center">
-            <Image Source="\Resource\pngwing.com (8).png"
+            <StackPanel Grid.RowSpan="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Image Source="\Resource\Заглушка.jpg" Width="200"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <TextBlock x:Name="SaleTB" FontSize="25" Foreground="White" Background="#FF1FE199"/>
+            </StackPanel>
+
+            <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Left">
+                <TextBlock x:Name="ProductDescriptionTB" FontSize="20" Margin="5">Коментарии</TextBlock>
+            </StackPanel>
+
+            <StackPanel Grid.Column="0" Grid.Row="5" Orientation="Horizontal" VerticalAlignment="Center">
+                <Image Source="\Resource\pngwing.com (8).png"
         Height="50" Width="50" HorizontalAlignment="Left"/>
-            <TextBlock Foreground="Red" FontSize="20" VerticalAlignment="Center">Рейтинг</TextBlock>
-        </StackPanel>
+                <TextBlock x:Name="ReviewTB" Foreground="Red" FontSize="20" VerticalAlignment="Center">Оценка</TextBlock>
+            </StackPanel>
 
-        <StackPanel Grid.Column="0" Grid.Row="5" Grid.RowSpan="1" Grid.ColumnSpan="2" VerticalAlignment="Center">
-            <TextBlock Foreground="Black" FontSize="40">Цена</TextBlock>
-        </StackPanel>
+            <StackPanel Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" Grid.ColumnSpan="2" VerticalAlignment="Center">
+                <TextBlock x:Name="ProductPriceTB" Margin="5" Foreground="Black" FontSize="40">Цена</TextBlock>
+            </StackPanel>
 
-        <StackPanel Grid.Column="0" Grid.Row="6" Grid.RowSpan="2" Grid.ColumnSpan="1" VerticalAlignment="Center">
-            <Image Source="\Resource\pngwing.com (9).png"
-        Height="100" Width="100"/>
-        </StackPanel>
+            <StackPanel Grid.Column="0" Grid.Row="7" Grid.RowSpan="2" Grid.ColumnSpan="1" VerticalAlignment="Center">
+                <Button Margin="5" Height="75" Width="100" Background="Red">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="13"/>
+                        </Style>
+                    </Button.Resources>
+                    <Image Source="\Resource\pngwing.com (9).png"
+        Height="75" Width="75"/>
+                </Button>
+            </StackPanel>
 
-        <StackPanel Grid.Column="1" Grid.Row="6" Grid.RowSpan="2" Grid.ColumnSpan="1" VerticalAlignment="Center">
-            <Image Source="\Resource\pngwing.com (9).png"
-        Height="100" Width="100"/>
-        </StackPanel>
-        
-        <StackPanel Grid.Column="2" Grid.Row="6" Grid.RowSpan="2" Grid.ColumnSpan="1" VerticalAlignment="Center">
-            <Image Source="\Resource\pngwing.com (9).png"
-        Height="100" Width="100"/>
-        </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="7" Grid.RowSpan="2" Grid.ColumnSpan="1" VerticalAlignment="Center">
+                <Button Margin="5" Height="75" Width="100">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="13"/>
+                        </Style>
+                    </Button.Resources>
+                    <Image Source="\Resource\pngwing.com (11).png"
+        Height="40" Width="40"/>
+                </Button>
+            </StackPanel>
 
-    </Grid>
+            <StackPanel Grid.Column="2" Grid.Row="7" Grid.RowSpan="2" Grid.ColumnSpan="1" VerticalAlignment="Center">
+                <Button Margin="5" Height="75" Width="100">
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="13"/>
+                        </Style>
+                    </Button.Resources>
+                    <Image Source="\Resource\статистика.png"
+        Height="50" Width="50"/>
+                </Button>
+            </StackPanel>
+
+        </Grid>
+    </Border>
 </UserControl>
