--- a/Zadanie_Kogorev/Pages/ProductUserControl1.xaml
+++ b/Zadanie_Kogorev/Pages/ProductUserControl1.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Zadanie_Kogorev.Pages"
              mc:Ignorable="d" 
-             d:DesignHeight="600" d:DesignWidth="400">
-    <Border BorderBrush="Black" BorderThickness="1" Margin="10" Height="500" Width="400">
+             d:DesignHeight="600" d:DesignWidth="350">
+    <Border BorderBrush="Black" BorderThickness="1" Margin="10" Height="600" Width="345">
         <Grid Margin="1 0 -1 0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -24,57 +24,43 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
+                <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
             <StackPanel Margin="10" Grid.RowSpan="4" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Image Source="\Resource\Заглушка.jpg" Width="200" Height="200"/>
+                <Image x:Name="IconIMG" Source="\Resource\Заглушка.jpg" Width="200" Height="200"/>
             </StackPanel>
 
             <StackPanel Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <TextBlock x:Name="SaleTB" FontSize="25" Foreground="White" Background="#FF1FE199"/>
+                <TextBlock x:Name="SaleTB" FontSize="30" Foreground="White" Background="#FF1FE199"/>
             </StackPanel>
 
-            <TextBlock Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Left"
-            x:Name="ProductDescriptionTB" FontSize="20" TextWrapping="Wrap">Коментарии</TextBlock>
+            <TextBlock Margin="5" Grid.Row="4" Grid.Column="0" Grid.RowSpan="2" Grid.ColumnSpan="3" HorizontalAlignment="Left"
+            x:Name="ProductDescriptionTB" VerticalAlignment="Top" FontSize="20" TextWrapping="Wrap">Коментарии</TextBlock>
 
-            <StackPanel Grid.Column="0" Grid.Row="5" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <StackPanel Grid.Column="0" Grid.Row="6" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
                 <Image Source="\Resource\pngwing.com (8).png"
-        Height="50" Width="50" HorizontalAlignment="Left"/>
+        Height="50" Width="35" HorizontalAlignment="Left"/>
                 <TextBlock x:Name="ReviewTB" Foreground="Red" FontSize="20" VerticalAlignment="Center">Оценка</TextBlock>
             </StackPanel>
             
-            <TextBlock Grid.Column="1" Grid.Row="5" Name="CountReviewTB" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"></TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="6" Name="CountReviewTB" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"></TextBlock>
 
-            <StackPanel Grid.Column="0" Grid.Row="6" Grid.RowSpan="1" Grid.ColumnSpan="2" VerticalAlignment="Center">
+            <StackPanel Grid.Column="0" Grid.Row="7" Grid.RowSpan="1" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Left">
                 <TextBlock Margin="10 0 0 0" x:Name="ProductPriceTB" Foreground="Black" FontSize="40">Цена</TextBlock>
             </StackPanel>
 
-            <TextBlock Grid.Column="2" Grid.Row="6" Name="OldProductPriceTB" FontSize="20" TextDecorations="Strikethrough" HorizontalAlignment="Left" VerticalAlignment="Center"></TextBlock>
+            <TextBlock Grid.Column="2" Grid.Row="7" Name="OldProductPriceTB" FontSize="20" TextDecorations="Strikethrough" HorizontalAlignment="Left" VerticalAlignment="Center"></TextBlock>
 
-                <Button Grid.Column="0" Grid.Row="7" Grid.RowSpan="2" Margin="5" Background="Red">
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="13"/>
-                        </Style>
-                    </Button.Resources>
+            <Button x:Name="DelBTN" Grid.Column="0" Grid.Row="8" Grid.RowSpan="2" Margin="5" Background="Red">
                     <Image Source="\Resource\pngwing.com (9).png" Height="75" Width="75"/>
                 </Button>
 
-                <Button Grid.Column="1" Grid.Row="7" Grid.RowSpan="2" Margin="5">
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="13"/>
-                        </Style>
-                    </Button.Resources>
+            <Button x:Name="EditBTN" Grid.Column="1" Grid.Row="8" Grid.RowSpan="2" Margin="5">
                     <Image Source="\Resource\pngwing.com (11).png" Height="50" Width="50"/>
                 </Button>
 
-                <Button Grid.Column="2" Grid.Row="7" Grid.RowSpan="2" Margin="5">
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="13"/>
-                        </Style>
-                    </Button.Resources>
+            <Button x:Name="AnalysBTN" Grid.Column="2" Grid.Row="8" Grid.RowSpan="2" Margin="5">
                     <Image Source="\Resource\статистика.png" Height="75" Width="75"/>
                 </Button>
 
